--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "leaflet": "^1.9.4",
     "material-design-icons": "^3.0.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-leaflet": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
