--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "material-design-icons": "^3.0.1",
     "split-type": "^0.3.4",
     "vue": "^3.4.31",
-    "vue-leaflet": "^0.1.0"
+    "vue-leaflet": "^0.1.0",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
