--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "leaflet": "^1.9.4",
     "leaflet-vue": "^0.1.0",
     "material-design-icons": "^3.0.1",
+    "router": "^1.3.8",
     "split-type": "^0.3.4",
     "vue": "^3.4.31",
     "vue-leaflet": "^0.1.0",
