--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "leaflet-vue": "^0.1.0",
+    "leaflet.markercluster": "^1.5.3",
     "material-design-icons": "^3.0.1",
     "router": "^1.3.8",
     "split-type": "^0.3.4",
