--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.12",
     "core-js": "^3.8.3",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
@@ -18,7 +19,8 @@
     "split-type": "^0.3.4",
     "vue": "^3.4.31",
     "vue-leaflet": "^0.1.0",
-    "vue-router": "^4.4.0"
+    "vue-router": "^4.4.0",
+    "vuejs-dialog": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
