--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-design-icons": "^3.0.1",
     "router": "^1.3.8",
     "split-type": "^0.3.4",
+    "sweetalert2": "^11.12.3",
     "vue": "^3.4.31",
     "vue-leaflet": "^0.1.0",
     "vue-router": "^4.4.0",
